<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="center"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"

            android:focusable="true"
            android:focusableInTouchMode="true"

            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/labelDescricao"

                android:textSize="@dimen/textViewSize"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                />

            <EditText
                android:id="@+id/etDescricao"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/hintDescricao"
                android:textSize="@dimen/editTextSize"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:paddingTop="@dimen/paddingCadastroTop"
                android:paddingBottom="@dimen/paddingCadastroBottom"

                android:text="@string/labelCategoria"

                android:textSize="@dimen/textViewSize"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                />

            <RadioGroup
                android:id="@+id/rgCategoria"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <RadioButton
                    android:id="@+id/rbEntrada"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/rbTextEntrada"

                    android:textSize="@dimen/radioButtonSize"
                    />

                <RadioButton
                    android:id="@+id/rbPratoPrincipal"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/rbTextPratoPrincipal"

                    android:textSize="@dimen/radioButtonSize"
                    />
                <RadioButton
                    android:id="@+id/rbSobremesa"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/rbTextSobremesa"

                    android:textSize="@dimen/radioButtonSize"
                    />
                <RadioButton
                    android:id="@+id/rbLanche"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/rbTextLanche"

                    android:textSize="@dimen/radioButtonSize"
                    />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:paddingTop="@dimen/paddingCadastroTop"
                android:paddingBottom="@dimen/paddingCadastroBottom"

                android:text="Avaliação"

                android:textSize="@dimen/textViewSize"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                />

            <RatingBar

                android:id="@+id/ratingBarAvaliacao"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"

                android:rating="0"

                android:isIndicator="false"
                />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingTop="@dimen/paddingCadastroTop"
                android:paddingBottom="@dimen/paddingCadastroBottom"

                >

                <ImageButton
                    android:id="@+id/ibtnTirarFoto"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:src="@drawable/image_logo"

                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"

                    android:onClick="clicouNoBotaoTirarFoto"
                    />

                <TextView
                    android:id="@+id/txtLabelFoto"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/labelFoto"

                    android:textSize="@dimen/textViewSize"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/ivFotoComida"

                android:adjustViewBounds="true"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:gravity="center|bottom"

                android:orientation="vertical"
                >

                <Button
                    android:id="@+id/btnSalvar"

                    android:layout_marginTop="@dimen/marginButtonSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/btnSalvar"

                    android:textAllCaps="false"
                    android:textSize="@dimen/btnSize"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorPrimary"

                    android:onClick="clicouNoSalvar"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
